--- a/index.html
+++ b/index.html
@@ -2180,7 +2180,7 @@ function formatTimeUserFriendly(minutes) {
                 if (multProvs) {
                     results.innerHTML += `<p>This child is attending multiple providers${isPrimary ? ' and this is the primary provider.' : ' but this is not the primary provider.'}</p>`;
                     
-                    if (careResult.totalTime === 0) {
+                    if (initCareResult.totalTime === 0) {
                         results.innerHTML += '<p>No care is needed with this provider.</p>';
                         continue;
                     }
@@ -2653,7 +2653,11 @@ function formatTimeUserFriendly(minutes) {
 									}
 									else
 									{
-										myType += 'SchoolPT' + calculationResult.partialDays > 0 ? 'Partial' : '';
+										myType += 'SchoolPT';
+										if(calculationResult.partialDays > 0)
+										{
+											myType += 'Partial';
+										}
 										eqFD = calculationResult.fullDays;
 										eqPD = calculationResult.partialDays;
 										eqHD = calculationResult.halfDays;
@@ -2669,7 +2673,7 @@ function formatTimeUserFriendly(minutes) {
 											SeqPD = calculationResult.SummerPartialDays;
 											SeqHD = calculationResult.SummerHalfDays;
 										}
-										if((((eqFD*2)+(eqPD*1.5)+(eqHD)) != ((SeqFD*2)+(SeqPD*1.5)+(SeqHD))) || (((eqFD * myFDRate)+(eqPD*myPDRate)+(eqHD*myHDRate)) != ((SeqFD * myFDRate)+(SeqPD*myPDRate)+(SeqHD*myHDRate))))
+										if((((eqFD*2)+(eqPD*1.5)+(eqHD)) < ((SeqFD*2)+(SeqPD*1.5)+(SeqHD))) || (((eqFD * myFDRate)+(eqPD*myPDRate)+(eqHD*myHDRate)) < ((SeqFD * myFDRate)+(SeqPD*myPDRate)+(SeqHD*myHDRate))))
 										{
 											summerChg = true;
 										}
@@ -2677,7 +2681,11 @@ function formatTimeUserFriendly(minutes) {
 								}
 								else // school aged child without 110hr summer care, only eligible for SchoolPT or SchoolPTPartial
 								{
-									myType += 'SchoolPT' + calculationResult.partialDays > 0 ? 'Partial' : '';
+									myType += 'SchoolPT';
+									if(calculationResult.partialDays > 0)
+									{
+										myType += 'Partial';
+									}
 									eqFD = calculationResult.fullDays;
 									eqPD = calculationResult.partialDays;
 									eqHD = calculationResult.halfDays;
@@ -2693,7 +2701,7 @@ function formatTimeUserFriendly(minutes) {
 										SeqPD = calculationResult.SummerPartialDays;
 										SeqHD = calculationResult.SummerHalfDays;
 									}
-									if((((eqFD*2)+(eqPD*1.5)+(eqHD)) != ((SeqFD*2)+(SeqPD*1.5)+(SeqHD))) || (((eqFD * myFDRate)+(eqPD*myPDRate)+(eqHD*myHDRate)) != ((SeqFD * myFDRate)+(SeqPD*myPDRate)+(SeqHD*myHDRate))))
+									if((((eqFD*2)+(eqPD*1.5)+(eqHD)) < ((SeqFD*2)+(SeqPD*1.5)+(SeqHD))) || (((eqFD * myFDRate)+(eqPD*myPDRate)+(eqHD*myHDRate)) < ((SeqFD * myFDRate)+(SeqPD*myPDRate)+(SeqHD*myHDRate))))
 									{
 										summerChg = true;
 									}
@@ -2723,7 +2731,7 @@ function formatTimeUserFriendly(minutes) {
 									SeqPD = calculationResult.SummerPartialDays;
 									SeqHD = calculationResult.SummerHalfDays;
 								}
-								if((((eqFD*2)+(eqPD*1.5)+(eqHD)) != ((SeqFD*2)+(SeqPD*1.5)+(SeqHD))) || (((eqFD * myFDRate)+(eqPD*myPDRate)+(eqHD*myHDRate)) != ((SeqFD * myFDRate)+(SeqPD*myPDRate)+(SeqHD*myHDRate))))
+								if((((eqFD*2)+(eqPD*1.5)+(eqHD)) < ((SeqFD*2)+(SeqPD*1.5)+(SeqHD))) || (((eqFD * myFDRate)+(eqPD*myPDRate)+(eqHD*myHDRate)) < ((SeqFD * myFDRate)+(SeqPD*myPDRate)+(SeqHD*myHDRate))))
 								{
 									summerChg = true;
 								}
@@ -2733,7 +2741,11 @@ function formatTimeUserFriendly(minutes) {
 						{
 							if(calculationResult.schoolAge && calculationResult.schoolOverlap)
 							{
-								myType+= 'SchoolPT' + calculationResult.partialDays > 0 ? 'Partial' : '';
+								myType+= 'SchoolPT';
+								if(calculationResult.partialDays > 0)
+								{ 
+									myType += 'Partial';
+								}
 							}
 							else
 							{
