--- a/standaloneMUC.html
+++ b/standaloneMUC.html
@@ -4,7 +4,13 @@
 		and because those should be permanent items in Barcode -->
 <!-- Now uses a temporary object myTempSchedule for all schedule editing, only saves schedule to data when using the save changes button -->
 <!-- TODO List:
-	
+	Add flag to househole members for children multHomes
+	Add flag to household members for children in multiHomes, primary auth
+	Add button to toggle multHomes for children in the Household Screen
+	Add button to toggle primary auth for children indicated in multihomes
+	If the child is not included, don't show either the multHomes or Primary toggle buttons or include in descriptions
+	Add check with warning if child is indicated in multHomes but does not have a Non-Care schedule
+	Use multHomes and primAuth flags to modify the calculation(s)? May only affect monthly units. Need to verify
 -->
 <html lang="en">
 <head>
@@ -1226,14 +1232,14 @@ function updateActivityTypeOptions()
 			typeSelect.innerHTML += '<option value="Activity">Activity</option>';
 			typeSelect.innerHTML += '<option value="Sleep">Sleep</option>';
 		} else if (memberType === 'C') { // Child
-			if(data.activities.filter(a => a.applicationId === Number(data.activeApplicationId) && ((a.type === 'school') || (a.type === 'preschool'))).length === 0)
+			if(data.activities.filter(a => a.applicationId === Number(data.activeApplicationId) && ((a.type === 'School') || (a.type === 'Preschool'))).length === 0)
 			{
-				typeSelect.innerHTML += '<option value="school">School</option>';
-				typeSelect.innerHTML += '<option value="preschool">Preschool</option>';
+				typeSelect.innerHTML += '<option value="School">School</option>';
+				typeSelect.innerHTML += '<option value="Preschool">Preschool</option>';
 			}
-			if(data.activities.filter(a => a.applicationId === Number(data.activeApplicationId) && a.type === 'non care').length === 0)
+			if(data.activities.filter(a => a.applicationId === Number(data.activeApplicationId) && a.type === 'Non care').length === 0)
 			{
-				typeSelect.innerHTML += '<option value="non care">Non Care</option>';
+				typeSelect.innerHTML += '<option value="Non care">Non Care</option>';
 			}
 		}
 	}
@@ -1257,9 +1263,9 @@ function addActivity()
 	switch(type) {
 		case 'Activity': scheduleType = 'A'; break;
 		case 'Sleep': scheduleType = 'L'; break;
-		case 'school': scheduleType = 'S'; break;
-		case 'preschool': scheduleType = 'P'; break;
-		case 'non care': scheduleType = 'N'; break;
+		case 'School': scheduleType = 'S'; break;
+		case 'Preschool': scheduleType = 'P'; break;
+		case 'Non care': scheduleType = 'N'; break;
 		default: scheduleType = 'A';
 	}
 	
@@ -2556,7 +2562,7 @@ function calculateCare(myData, myTargetElementId, careStartDate)
 		const childActivities = data.activities.filter(a => 
 			a.applicationId == data.activeApplicationId && 
 			a.personId === child.personId &&
-			(a.type === 'school' || a.type === 'preschool')
+			(a.type === 'School' || a.type === 'Preschool')
 		);
 		const childAgeMonths = calculateCompleteMonths(person.birthdate, careStartDate);
 		const cSD = new Date(careStartDate);
@@ -2591,7 +2597,7 @@ function calculateCare(myData, myTargetElementId, careStartDate)
 				console.log(`WARNING: School schedule for ${person.name} is empty!`);
 				hasWarnings = true;
 			}
-			if(((childAgeMonths >= 84) || (ageLastSchoolYear >= 60)) && a.type === 'preschool') // School-aged child with preschool type schedule
+			if(((childAgeMonths >= 84) || (ageLastSchoolYear >= 60)) && a.type === 'Preschool') // School-aged child with preschool type schedule
 			{
 				results.innerHTML += `<p class="warning">WARNING: School age child ${person.name} has a preschool type schedule!</p>`;
 				console.log(`WARNING: School age child ${person.name} has a preschool type schedule!`);
@@ -2728,7 +2734,7 @@ function calculateCare(myData, myTargetElementId, careStartDate)
 			const childNonCareActivities = data.activities.filter(a => 
 				a.applicationId == data.activeApplicationId && 
 				a.personId === child.id &&
-				a.type === 'non care'
+				a.type === 'Non care'
 			);
 			
 			// Subtract non-care schedules
@@ -2757,13 +2763,13 @@ function calculateCare(myData, myTargetElementId, careStartDate)
 		const childSchoolActivities = data.activities.filter(a => 
 			a.applicationId == data.activeApplicationId && 
 			a.personId === child.id &&
-			a.type === 'school'
+			a.type === 'School'
 		);
 
 		const childPreschoolActivities = data.activities.filter(a => 
 			a.applicationId == data.activeApplicationId && 
 			a.personId === child.id &&
-			a.type === 'preschool'
+			a.type === 'Preschool'
 		);
 		
 		const schoolAge = (childSchoolActivities.length > 0 && childAge >= 5) || childAge >= 7;
